# network_clock_c

./: README.md  Readme.md  config.c  config.h  console.c  copies.md  main_setime.c  network_clock.c  network_clock.h  project_tree.md  remote_client.c  security.c  security.h  server.c  server.h  time_setup.c  time_setup.manifest  todo.txt
Clock_Project/: .gitignore  CMakeLists.txt
Clock_Project/include/: config.h  console.h  network_clock.h  network_clock_server.h  security.h  server.h  time_setup.h
Clock_Project/src/: CMakeLists.txt  config.c  console.c  local_client.c  main_setime.c  network_clock.c  security.c  server.c  time_format.c  time_setup.c
independent_launch/: server.c  start_programs.bat  time_setup.c
trash/: mytime.h
